--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
     <div id="square" class="square red"></div>
-    <button>Change</button>
+    <button id="button">Change</button>
 
     <script src="main.js"></script>
 </body>
