--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
-    <button from_color="red" to_color="blue" id="blue_button">Blue</button>
-    <button from_color="blue" to_color="red" id="red_button">Red</button>
+    <div id="square" class="square red"></div>
+    <button color="blue" id="blue_button">Blue</button>
+    <button color="red" id="red_button">Red</button>
 
     <script src="main.js"></script>
 </body>
