--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Example </title>
 </head>
+
 <body>
-    
+
     <div id="square" class="square red"></div>
     <button color="blue" id="blue_button">Blue</button>
     <button color="red" id="red_button">Red</button>
+    <button color="green" id="green_button">Green</button>
 
     <script src="main.js"></script>
 </body>
+
 </html>
